# diskmon

./: .gitignore  CHANGELOG.md  Cargo.toml  Cross.toml  README.md
packaging/: setup.txt
packaging/systemd/: diskmon-force.service  diskmon-force.timer  diskmon.service  diskmon.timer
src/: config.rs  main.rs  system.rs
src/linux/: config.example.yaml  disk_health.rs  mod.rs
src/windows/: disk_health.rs  mod.rs
