[package]
name = "diskmon"
version = "0.3.0"
edition = "2024"

[[bin]]
name = "diskmon-mail"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sysinfo = "0.30"
hostname = "0.3"
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
lettre = { version = "0.11", features = ["smtp-transport", "builder"] }
openssl = { version = "0.10", features = ["vendored"] }
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
env_logger = "0.10"
futures = "0.3"
backoff = "0.4"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winioctl", "fileapi", "handleapi", "errhandlingapi", "sysinfoapi"] }
wmi = "0.13"
